[package]
name = "rust-simple-stack-processor"
version = "0.4.0"
authors = ["Frederick Price <rprice@pricemail.ca>"]
edition = "2018"
license = "MIT"
description = "A simple stack processor emulator written in Rust"
homepage = "https://github.com/rickprice/rust-simple-stack-processor"
repository = "https://github.com/rickprice/rust-simple-stack-processor"
keywords = ["emulator","processor","stack"]
categories = ["emulators","embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
